force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
  <label>Registration</label>
  <pluralLabel>Registrations</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Registration Number</label>
    <displayFormat>REG-{00000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>