force-app/main/default/objects/Registration__c/fields/Amount__c.field-meta.xml
<CustomField>
  <fullName>Amount__c</fullName>
  <label>Amount</label>
  <precision>10</precision>
  <scale>2</scale>
  <type>Currency</type>
</CustomField>