force-app/main/default/objects/Registration__c/fields/Attendee__c.field-meta.xml
<CustomField>
  <fullName>Attendee__c</fullName>
  <label>Attendee</label>
  <type>Lookup</type>
  <referenceTo>Attendee__c</referenceTo>
  <relationshipName>Attendee_Registrations</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>