force-app/main/default/objects/Registration__c/fields/Attendee_Event_Key__c.field-meta.xml
<CustomField>
  <fullName>Attendee_Event_Key__c</fullName>
  <label>Attendee-Event Key</label>
  <type>Text</type>
  <length>90</length>
  <unique>true</unique>
</CustomField>