force-app/main/default/objects/Registration__c/fields/Discount__c.field-meta.xml
<CustomField>
  <fullName>Discount__c</fullName>
  <label>Discount</label>
  <type>Percent</type>
  <precision>3</precision>
  <scale>0</scale>
</CustomField>