force-app/main/default/objects/Registration__c/fields/Event__c.field-meta.xml
<CustomField>
  <fullName>Event__c</fullName>
  <label>Event</label>
  <type>MasterDetail</type>
  <referenceTo>Event__c</referenceTo>
  <relationshipName>Registrations</relationshipName>
</CustomField>