force-app/main/default/objects/Registration__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
  <fullName>Payment_Status__c</fullName>
  <label>Payment Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Pending</fullName>
        <default>true</default>
      </value>
      <value>
        <fullName>Paid</fullName>
      </value>
      <value>
        <fullName>Failed</fullName>
      </value>
      <value>
        <fullName>Refunded</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>