force-app/main/default/objects/Registration__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Pending</fullName><default>true</default></value>
      <value><fullName>Confirmed</fullName><default>false</default></value>
      <value><fullName>Cancelled</fullName><default>false</default></value>
      <value><fullName>Approved</fullName><default>false</default></value>
      <value><fullName>Rejected</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>