force-app/main/default/objects/Registration__c/fields/VIP__c.field-meta.xml
<CustomField>
  <fullName>VIP__c</fullName>
  <label>VIP</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>