force-app/main/default/objects/Registration__c/validationRules/Block_Confirm_On_Past_Event.validationRule-meta.xml
<ValidationRule>
  <fullName>Block_Confirm_On_Past_Event</fullName>
  <active>true</active>
  <errorConditionFormula>AND(
    NOT(ISBLANK(Event__c)),
    ISPICKVAL(Status__c, "Confirmed"),
    OR(
      ISNEW(),
      ISCHANGED(Status__c),
      ISCHANGED(Event__c)
    ),
    OR(
      Event__r.Start_Date__c &lt; TODAY(),
      Event__r.Event_Date__c &lt; NOW()
    )
  )</errorConditionFormula>
  <errorMessage>You cannot set Status to Confirmed for a past event.</errorMessage>
  <errorDisplayField>Status__c</errorDisplayField>
</ValidationRule>