force-app/main/default/objects/Registration__c/validationRules/Key_Required_On_Confirmed.validationRule-meta.xml
<ValidationRule>
  <fullName>Key_Required_On_Confirmed</fullName>
  <active>true</active>
  <errorConditionFormula>AND(ISPICKVAL(Status__c, "Confirmed"), ISBLANK(Attendee_Event_Key__c))</errorConditionFormula>
  <errorMessage>Composite key is required when status is Confirmed.</errorMessage>
  <errorDisplayField>Attendee_Event_Key__c</errorDisplayField>
</ValidationRule>