force-app/main/default/objects/Registration__c/validationRules/Overcapacity_On_Confirmed.validationRule-meta.xml
<ValidationRule>
  <fullName>Overcapacity_On_Confirmed</fullName>
  <active>true</active>
  <errorConditionFormula>AND(ISPICKVAL(Status__c, "Confirmed"), NOT(ISBLANK(Event__c)), Event__r.Attendee_Count__c &gt;= Event__r.Capacity__c)</errorConditionFormula>
  <errorMessage>Event capacity exceeded. No more registrations allowed.</errorMessage>
  <errorDisplayField>Event__c</errorDisplayField>
</ValidationRule>